{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 42,
  "lineage": "ebb9b067-8dba-b011-ab9c-e86d84d5de67",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db21cb102aaa3db9",
            "arn": "arn:aws:ec2:ap-south-1:941178226447:elastic-ip/eipalloc-0db21cb102aaa3db9",
            "association_id": "eipassoc-0abc9887681a086c6",
            "domain": "vpc",
            "id": "eipalloc-0db21cb102aaa3db9",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0e0a2937ee2474748",
            "private_dns": "ip-10-0-1-231.ap-south-1.compute.internal",
            "private_ip": "10.0.1.231",
            "public_dns": "ec2-13-207-97-139.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.207.97.139",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "ecommerce-nat-eip"
            },
            "tags_all": {
              "Name": "ecommerce-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "eipalloc-0db21cb102aaa3db9",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a00cf47dbbc844c",
            "arn": "arn:aws:ec2:ap-south-1:941178226447:instance/i-003557d9dae965d7b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003557d9dae965d7b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "mac_pass",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e43a3d4af31562e1"
              }
            ],
            "primary_network_interface_id": "eni-0e43a3d4af31562e1",
            "private_dns": "ip-10-0-3-113.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.113",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-023cd1c7f89a0e653",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01873cffa6bc40500",
            "tags": {
              "Name": "application-node-1"
            },
            "tags_all": {
              "Name": "application-node-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0735d54921e4b54c4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "i-003557d9dae965d7b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.bastion_sg",
            "aws_subnet.private_subnet_1",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a00cf47dbbc844c",
            "arn": "arn:aws:ec2:ap-south-1:941178226447:instance/i-0660c854c26884613",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0660c854c26884613",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "mac_pass",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06e06dcdd2cbaee7b"
              }
            ],
            "primary_network_interface_id": "eni-06e06dcdd2cbaee7b",
            "private_dns": "ip-10-0-4-45.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.45",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-092a420e6703b9983",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03a2fb656ea1ca527",
            "tags": {
              "Name": "application-node-2"
            },
            "tags_all": {
              "Name": "application-node-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0735d54921e4b54c4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "i-0660c854c26884613",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.bastion_sg",
            "aws_subnet.private_subnet_2",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a00cf47dbbc844c",
            "arn": "arn:aws:ec2:ap-south-1:941178226447:instance/i-082c4510c8d77b754",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-082c4510c8d77b754",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "mac_pass",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0bc952e4025b861bd"
              }
            ],
            "primary_network_interface_id": "eni-0bc952e4025b861bd",
            "private_dns": "ip-10-0-1-113.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.113",
            "public_dns": "ec2-13-233-110-191.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.110.191",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0de82bb85aed06503",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c42cf600e8fcd3a",
            "tags": {
              "Name": "bastion-devops-control-node"
            },
            "tags_all": {
              "Name": "bastion-devops-control-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aba79a20ea7f8589"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "i-082c4510c8d77b754",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a00cf47dbbc844c",
            "arn": "arn:aws:ec2:ap-south-1:941178226447:instance/i-006ffa16f09b0d255",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-006ffa16f09b0d255",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "mac_pass",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04887b47ea4c5991b"
              }
            ],
            "primary_network_interface_id": "eni-04887b47ea4c5991b",
            "private_dns": "ip-10-0-3-171.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.171",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02326529b2040a5e5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01873cffa6bc40500",
            "tags": {
              "Name": "postgresql-database-node"
            },
            "tags_all": {
              "Name": "postgresql-database-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-030fa766a41f356a0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "i-006ffa16f09b0d255",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.db_sg",
            "aws_subnet.private_subnet_1",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941178226447:internet-gateway/igw-03c9526305d5d6383",
            "id": "igw-03c9526305d5d6383",
            "owner_id": "941178226447",
            "region": "ap-south-1",
            "tags": {
              "Name": "ecommerce-igw"
            },
            "tags_all": {
              "Name": "ecommerce-igw"
            },
            "vpc_id": "vpc-06183995ab05d4a72"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "igw-03c9526305d5d6383",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecommerce_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:941178226447:loadbalancer/app/ecommerce-alb/5facbf4660a5fce3",
            "arn_suffix": "app/ecommerce-alb/5facbf4660a5fce3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecommerce-alb-297161446.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:941178226447:loadbalancer/app/ecommerce-alb/5facbf4660a5fce3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecommerce-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-024075d01b46c0a25"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01c42cf600e8fcd3a"
              },
              {
                "subnet_id": "subnet-09e349db730eb42ec"
              }
            ],
            "subnets": [
              "subnet-01c42cf600e8fcd3a",
              "subnet-09e349db730eb42ec"
            ],
            "tags": {
              "Name": "ecommerce-alb"
            },
            "tags_all": {
              "Name": "ecommerce-alb"
            },
            "vpc_id": "vpc-06183995ab05d4a72",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:941178226447:loadbalancer/app/ecommerce-alb/5facbf4660a5fce3"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:941178226447:listener/app/ecommerce-alb/5facbf4660a5fce3/2d2d67e5ca0010c5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:941178226447:targetgroup/ecommerce-app-tg/1110db1b0b86b39f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:941178226447:listener/app/ecommerce-alb/5facbf4660a5fce3/2d2d67e5ca0010c5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:941178226447:loadbalancer/app/ecommerce-alb/5facbf4660a5fce3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:941178226447:listener/app/ecommerce-alb/5facbf4660a5fce3/2d2d67e5ca0010c5"
          },
          "dependencies": [
            "aws_lb.ecommerce_alb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:941178226447:targetgroup/ecommerce-app-tg/1110db1b0b86b39f",
            "arn_suffix": "targetgroup/ecommerce-app-tg/1110db1b0b86b39f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:941178226447:targetgroup/ecommerce-app-tg/1110db1b0b86b39f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecommerce-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06183995ab05d4a72"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:941178226447:targetgroup/ecommerce-app-tg/1110db1b0b86b39f"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app1_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:941178226447:targetgroup/ecommerce-app-tg/1110db1b0b86b39f,i-003557d9dae965d7b,80",
            "port": 80,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:941178226447:targetgroup/ecommerce-app-tg/1110db1b0b86b39f",
            "target_id": "i-003557d9dae965d7b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "port": 80,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:941178226447:targetgroup/ecommerce-app-tg/1110db1b0b86b39f",
            "target_id": "i-003557d9dae965d7b"
          },
          "dependencies": [
            "aws_instance.app1",
            "aws_lb_target_group.app_tg",
            "aws_security_group.app_sg",
            "aws_security_group.bastion_sg",
            "aws_subnet.private_subnet_1",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app2_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:941178226447:targetgroup/ecommerce-app-tg/1110db1b0b86b39f,i-0660c854c26884613,80",
            "port": 80,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:941178226447:targetgroup/ecommerce-app-tg/1110db1b0b86b39f",
            "target_id": "i-0660c854c26884613"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "port": 80,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:941178226447:targetgroup/ecommerce-app-tg/1110db1b0b86b39f",
            "target_id": "i-0660c854c26884613"
          },
          "dependencies": [
            "aws_instance.app2",
            "aws_lb_target_group.app_tg",
            "aws_security_group.app_sg",
            "aws_security_group.bastion_sg",
            "aws_subnet.private_subnet_2",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db21cb102aaa3db9",
            "association_id": "eipassoc-0abc9887681a086c6",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-097eec1dac432923b",
            "network_interface_id": "eni-0e0a2937ee2474748",
            "private_ip": "10.0.1.231",
            "public_ip": "13.207.97.139",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01c42cf600e8fcd3a",
            "tags": {
              "Name": "ecommerce-nat-gateway"
            },
            "tags_all": {
              "Name": "ecommerce-nat-gateway"
            },
            "vpc_id": "vpc-06183995ab05d4a72"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "nat-097eec1dac432923b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941178226447:route-table/rtb-0c0007806ee0af55b",
            "id": "rtb-0c0007806ee0af55b",
            "owner_id": "941178226447",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-097eec1dac432923b",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06183995ab05d4a72"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "rtb-0c0007806ee0af55b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet_1",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941178226447:route-table/rtb-07a46b1de8399b887",
            "id": "rtb-07a46b1de8399b887",
            "owner_id": "941178226447",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c9526305d5d6383",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06183995ab05d4a72"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "rtb-07a46b1de8399b887",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028c4164bb1459ae6",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c0007806ee0af55b",
            "subnet_id": "subnet-01873cffa6bc40500"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "rtbassoc-028c4164bb1459ae6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b1600ed9aadf484",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c0007806ee0af55b",
            "subnet_id": "subnet-03a2fb656ea1ca527"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "rtbassoc-06b1600ed9aadf484",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c19c087bc0b3380f",
            "region": "ap-south-1",
            "route_table_id": "rtb-07a46b1de8399b887",
            "subnet_id": "subnet-01c42cf600e8fcd3a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "rtbassoc-0c19c087bc0b3380f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0107e21c666106dc1",
            "region": "ap-south-1",
            "route_table_id": "rtb-07a46b1de8399b887",
            "subnet_id": "subnet-09e349db730eb42ec"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "rtbassoc-0107e21c666106dc1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941178226447:security-group/sg-024075d01b46c0a25",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024075d01b46c0a25",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "941178226447",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06183995ab05d4a72"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "sg-024075d01b46c0a25",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941178226447:security-group/sg-0735d54921e4b54c4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0735d54921e4b54c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aba79a20ea7f8589"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "941178226447",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06183995ab05d4a72"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "sg-0735d54921e4b54c4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941178226447:security-group/sg-0aba79a20ea7f8589",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aba79a20ea7f8589",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "941178226447",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06183995ab05d4a72"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "sg-0aba79a20ea7f8589",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941178226447:security-group/sg-030fa766a41f356a0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030fa766a41f356a0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aba79a20ea7f8589"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0735d54921e4b54c4"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "941178226447",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06183995ab05d4a72"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "sg-030fa766a41f356a0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941178226447:subnet/subnet-01873cffa6bc40500",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01873cffa6bc40500",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941178226447",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-06183995ab05d4a72"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "subnet-01873cffa6bc40500",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941178226447:subnet/subnet-03a2fb656ea1ca527",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a2fb656ea1ca527",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941178226447",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-06183995ab05d4a72"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "subnet-03a2fb656ea1ca527",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941178226447:subnet/subnet-01c42cf600e8fcd3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c42cf600e8fcd3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941178226447",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-06183995ab05d4a72"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "subnet-01c42cf600e8fcd3a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941178226447:subnet/subnet-09e349db730eb42ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e349db730eb42ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941178226447",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-06183995ab05d4a72"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "subnet-09e349db730eb42ec",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecommerce_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:941178226447:vpc/vpc-06183995ab05d4a72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eee5c46ab986d055",
            "default_route_table_id": "rtb-056a062bd889afaa8",
            "default_security_group_id": "sg-0b4b0720006c28dad",
            "dhcp_options_id": "dopt-02bcfcbdc8e84f841",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06183995ab05d4a72",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-056a062bd889afaa8",
            "owner_id": "941178226447",
            "region": "ap-south-1",
            "tags": {
              "Name": "ecommerce-vpc"
            },
            "tags_all": {
              "Name": "ecommerce-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941178226447",
            "id": "vpc-06183995ab05d4a72",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}